[package]
name = "pandemonium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
futures = "0.3.24"
log = "0.4.17"
rdkafka = { version = "0.28.0", features = ["cmake-build"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
todel = { git = "https://github.com/eludris/todel", version = "0.1.0" }
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"] }
