[package]
name = "pandemonium"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
deadpool-redis = "0.10.2"
dotenvy = "0.15.6"
env_logger = "0.9.0"
futures = "0.3.24"
log = "0.4.17"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
todel = { features = ["logic"], version = "0.2.4", git = "https://github.com/eludris/todel" }
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"] }
